Box shadows for current input and buttons, z-index offset to avoid overlap

--- a/Calculator-v2/style.css
+++ b/Calculator-v2/style.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    width: 400px;
+    
 }
 
 .currentInput {
@@ -12,8 +14,9 @@
     background-color: #409cbd;
     border-radius: 40px;
     font-size: 3em;
-    justify-content: right;
+    justify-content: center;
     align-content: space-around;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .buttonBox {
@@ -29,7 +32,19 @@ button {
     height: 100px;
     border-radius: 50%;
     font-size: 2em;
+    position: relative;
 }
+
+button:before {
+    position: absolute;
+    border-radius: 50%;
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
 
 .number {
     background-color: #6daac0;
